# my-feed

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 1_schema.sql  2_source_min_date.sql
src/: config.rs  error.rs  main.rs
src/api/: auth.rs  crud.rs  mod.rs  preview.rs  rss.rs
src/db/: item.rs  mod.rs  source.rs  tag.rs
test-data/: db
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  main.tsx  theme.ts
web/src/api/: index.ts
web/src/components/: Tag.tsx
web/src/components/Item/: Item.css.ts  Item.tsx
web/src/components/Layout/: DesktopLayout.tsx  Header.tsx
web/src/components/Settings/: AddSourceModal.tsx  EditTagModal.tsx  Sources.tsx  Tags.tsx
web/src/components/form/: DateInput.tsx
web/src/pages/: Home.tsx  Settings.tsx
web/src/types/: PollMessage.ts  item.ts  source.ts  tag.ts
web/src/utils/: date.ts  tags.ts  useAuth.ts
